--- a/config_second_city.json
+++ b/config_second_city.json
@@ -1,5 +1,7 @@
 {
     "title_style": "inbody",
+    "page_numbers": true,
+    "title_with_page_number": true,
     "format_style": "parenthetical_actions",
     "metadata": { "left_margin": 1.5, "right_margin": 1 },
     "cast": { "left_margin": 1.5, "right_margin": 1 },
